<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oscuro"
    tools:context=".ui.CalcularEstructuraFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="18dp"
        android:text="@string/calcular_estructuras"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_loza"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="6dp"
        android:background="@color/claro"
        android:padding="6dp"
        android:text="@string/loza"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/bt_vigas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="6dp"
        android:background="@color/claro"
        android:padding="6dp"
        android:text="@string/vigas"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_loza" />

    <Button
        android:id="@+id/bt_columnas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="30dp"
        android:background="@color/claro"
        android:padding="6dp"
        android:text="@string/columnas"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_vigas" />

</androidx.constraintlayout.widget.ConstraintLayout>