<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_light_blue"
    tools:context=".ui.CalcularParedesFragment">

    <TextView
        android:id="@+id/tw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_title"
        android:padding="8dp"
        android:text="@string/calcular_paredes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_ladrillo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/gradient_button_blue"
        android:padding="6dp"
        android:text="@string/pared_de_ladrillos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_seco"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/gradient_button_blue"
        android:padding="6dp"
        android:text="@string/pared_en_seco"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_ladrillo" />



</androidx.constraintlayout.widget.ConstraintLayout>