<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_light_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ConstruccionSecaFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_title"
        android:padding="8dp"
        android:text="@string/calcular_pared_seca"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_mt2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/corner_edit_text"
        android:hint="@string/mt2_a_trabajar"
        android:inputType="number"
        android:padding="6dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_0.50"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_cancel"
        android:text="@string/cancel"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mt2" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:enabled="false"
        android:textColor="@color/white"
        android:text="@string/calcular"
        android:background="@drawable/state_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_0.50"
        app:layout_constraintTop_toBottomOf="@+id/et_mt2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mt2">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="@string/montante_a_utilizar"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tw_montante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="@string/soleras_a_utilizar"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tw_solera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="@string/cinta_a_utilizar"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tw_cinta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="21sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="@string/masilla_a_utilizar"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tw_masilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="21sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="@string/placas_a_utilizar"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tw_placa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/gradient_title"
                android:padding="6dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="21sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>